--- a/modules/ledger/templates/debts.html
+++ b/modules/ledger/templates/debts.html
@@ -11,7 +11,7 @@
 <aside class="sidebar">
     <h1>Ledger</h1>
     <nav class="nav">
-        <a href="/"> ⬅️ Go Back</a>
+        <a href="/apps"> ⬅️ Go Back</a>
         <a href="/ledger">Accounts</a>
         <a href="/ledger/planning">Financial Planning</a>
         <a href="/ledger/debts" class="active">Debts</a>
