--- a/modules/ledger/templates/ledger.html
+++ b/modules/ledger/templates/ledger.html
@@ -12,7 +12,7 @@
   <aside class="sidebar">
     <h1>Ledger</h1>
     <nav class="nav">
-      <a href="/"> ⬅️ Go Back</a>
+      <a href="/apps"> ⬅️ Go Back</a>
       <a href="/ledger" class="active">Accounts</a>
       <a href="/ledger/planning">Financial Planning</a>
       <a href="/ledger/debts">Debts</a>
