--- a/modules/logviewer/templates/loglist.html
+++ b/modules/logviewer/templates/loglist.html
@@ -10,7 +10,7 @@
 <body>
 
 <main class="main">
-    <a href="/" id="back_btn">Back</a>
+    <a href="/apps" id="back_btn">Back</a>
     <!-- Search Bar -->
     <div class="log-search-container">
         <input type="text" id="searchInput" placeholder="Search logs for text...">
