--- a/modules/textbook/templates/index.html
+++ b/modules/textbook/templates/index.html
@@ -9,9 +9,9 @@
 <body>
 <div id="toast-container"></div>
 <div id="page-wrapper">
-    <a id="return_btn_mobile" href="/">Return</a>
+    <a id="return_btn_mobile" href="/apps">Return</a>
     <div id="left-container">
-        <a id="return_btn" href="/">⟵ Return</a>
+        <a id="return_btn" href="/apps">⟵ Return</a>
         <button id="new-doc-btn" onclick="createNewDocument()">📝 New Document</button>
         <input type="text" id="search-input" placeholder="Search by title or ID..." oninput="filterArchives()">
         <h2>Saved Texts</h2>
