--- a/modules/centralfiles/templates/index.html
+++ b/modules/centralfiles/templates/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header class="app-header">
       <h1 class="app-title">Central Files</h1>
-      <a class="back-btn" href="/">
+      <a class="back-btn" href="/apps">
         <span>←</span> Back to Dashboard
       </a>
     </header>
