--- a/modules/ledger/templates/planning.html
+++ b/modules/ledger/templates/planning.html
@@ -12,7 +12,7 @@
 <aside class="sidebar">
     <h1>Ledger</h1>
     <nav class="nav">
-        <a href="/"> ⬅️ Go Back</a>
+        <a href="/apps"> ⬅️ Go Back</a>
         <a href="/ledger">Accounts</a>
         <a href="/ledger/planning" class="active">Financial Planning</a>
         <a href="/ledger/debts">Debts</a>
