--- a/modules/login/templates/index.html
+++ b/modules/login/templates/index.html
@@ -16,7 +16,7 @@
   </noscript>
 
   <div class="login-container">
-    <h2>Secure Login</h2>
+    <h2>Knowledge</h2>
 
     <!-- Theme Toggle -->
     <button id="theme-toggle-login" type="button">🌙 Switch Theme</button>
