--- a/modules/centralfiles/templates/pc_profile.html
+++ b/modules/centralfiles/templates/pc_profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{ profile.name }} – Profile</title>
+  <title>{{ profile.name }} - PC Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/centralfiles/css/pc_profile.css">
   <link rel="stylesheet" href="/static/centralfiles/css/sidebar.css">
