--- a/modules/browser/templates/index.html
+++ b/modules/browser/templates/index.html
@@ -74,9 +74,9 @@
           <div class="app-name">Auth Permissions</div>
         </a>
 
-        <a href="/settings"  class="app-card muted" role="listitem" aria-label="Open Settings" tabindex="0">
-          <div class="app-icon"><img src="/static/browser/icons/settings.svg" alt="" aria-hidden="true" /></div>
-          <div class="app-name">Settings</div>
+        <a href="/knowledge"  class="app-card muted" role="listitem" aria-label="Open Settings" tabindex="0">
+          <div class="app-icon"><img src="/static/browser/icons/knowledge.svg" alt="" aria-hidden="true" /></div>
+          <div class="app-name">Knowledge</div>
         </a>
       </div>
     </section>
