--- a/modules/ledger/templates/planning.html
+++ b/modules/ledger/templates/planning.html
@@ -38,7 +38,7 @@
                     <label for="expense-frequency">Payment Frequency (Days)</label>
                     <input type="number" id="expense-frequency" min="1" required>
                 </div>
-                <button type="submit">Add Expense</button>
+                <button id="submitbtn" type="submit">Add Expense</button>
             </form>
         </section>
 
@@ -60,12 +60,15 @@
         </section>
 
         <section class="financial-target">
-            <div class="total-annual-expenses-container">
-                <div class="total-expenses-box">
-                    <p>Total Annual Expenses:</p>
-                    <span id="total-annual-expenses">$0.00</span>
-                </div>
+            <div class="total-expenses-box">
+                <p>Total Annual Expenses:</p>
+                <span id="total-annual-expenses">$0.00</span>
             </div>
+
+            <div id="canvas-container">
+                <canvas id="expense-pie-chart" width="400" height="400"></canvas>
+            </div>
+            
             <div class="target-box">
                 <p>The minimum needed to make per week to meet your financial target is:</p>
                 <div class="minimum-needed">
@@ -73,11 +76,6 @@
                 </div>
             </div>
         </section>
-    </div>
-    <div id="info_sect">
-        <div id="canvas-container">
-            <canvas id="expense-pie-chart" width="400" height="400"></canvas>
-        </div>
     </div>
 </main>
 <script src="/static/ledger/js/planning/planning.js"></script>
