added odo tracking

--- a/modules/ledger/static/css/ledger/ledger.css
+++ b/modules/ledger/static/css/ledger/ledger.css
@@ -203,6 +203,9 @@ body {
   font-size: 0.8rem;
   cursor: pointer;
   float: right;
+  padding: 4px;
+  border: none;
+  border-radius: 5px;
 }
 
 /* --- Account header --- */
