--- a/modules/ledger/templates/debts.html
+++ b/modules/ledger/templates/debts.html
@@ -16,6 +16,7 @@
         <a href="/ledger/planning">Financial Planning</a>
         <a href="/ledger/debts" class="active">Debts</a>
         <a href="/ledger/invoices">Invoices</a>
+        <a href="/ledger/odometering">Odometer Tracking</a>
     </nav>
 </aside>
 
