--- a/modules/ledger/templates/planning.html
+++ b/modules/ledger/templates/planning.html
@@ -17,6 +17,7 @@
         <a href="/ledger/planning" class="active">Financial Planning</a>
         <a href="/ledger/debts">Debts</a>
         <a href="/ledger/invoices">Invoices</a>
+        <a href="/ledger/odometering">Odometer Tracking</a>
     </nav>
 </aside>
 
