--- a/modules/ledger/templates/invoices.html
+++ b/modules/ledger/templates/invoices.html
@@ -16,6 +16,7 @@
         <a href="/ledger/planning">Financial Planning</a>
         <a href="/ledger/debts">Debts</a>
         <a href="/ledger/invoices" class="active">Invoices</a>
+        <a href="/ledger/odometering">Odometer Tracking</a>
     </nav>
 </aside>
 
