--- a/modules/ledger/templates/odometering.html
+++ b/modules/ledger/templates/odometering.html
@@ -52,19 +52,21 @@
 
     <div class="card">
       <h3>Log</h3>
-      <table>
-        <thead>
-          <tr>
-            <th>Date</th>
-            <th>Odometer (km)</th>
-            <th>Distance (km)</th>
-            <th>Purpose</th>
-            <th>Fuel Used</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="logTable"></tbody>
-      </table>
+      <div class="table-wrapper">
+        <table>
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Odometer (km)</th>
+              <th>Distance (km)</th>
+              <th>Purpose</th>
+              <th>Fuel Used</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="logTable"></tbody>
+        </table>
+      </div>
     </div>
   </main>
 
