--- a/modules/browser/static/css/index.css
+++ b/modules/browser/static/css/index.css
@@ -16,6 +16,12 @@
   border-bottom: 1px solid rgba(255,255,255,0.03);
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .topbar-inner {
   width: 100%;
   max-width: var(--max-width);
@@ -116,6 +122,7 @@
   color: var(--text);
   font-size: 1rem;
   text-align: center;
+  background-color: rgb(250, 250, 250);
 }
 
 #logout-container { display:flex; justify-content:center; margin:30px 0 10px; }
